--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -10,4 +10,10 @@
     </ul>
   </div>
 </nav>
+
+<a [routerLink]="['cv', 'new']">LINK NEW</a>
+<br>
+<a [routerLink]="['cv', 1, 'edit']">LINK EDIT</a>
+<br>
+<a [routerLink]="['cv', 1, 'delete']">LINK DELETE</a>
  <router-outlet />
