--- a/portfolio-app/src/app/components/cv/cv.component.html
+++ b/portfolio-app/src/app/components/cv/cv.component.html
@@ -16,12 +16,15 @@
  <button class="btn grey" type="button" (click)="formGroup = undefined">cancel</button>
 </form>
 }
-<button class="btn" type="button" (click)="select()">new</button>
+<a class="btn" [routerLink]="['new']">new</a>
 <ul>
  @for (cv of cvs; track cv.employer) {
  <li>{{ cv.employer }} {{ cv.start }} - {{ cv.end }}
  <button class="btn" (click)="select(cv)">edit</button>
- <button class="btn red" (click)="deleteCV(cv.id)">delete</button>
- </li>
+ <a class="btn" [routerLink]="[cv.id, 'edit']">EDIT</a>
+ <a class="btn red" [routerLink]="[cv.id, 'delete']"> DELETE</a> 
+
+
+</li>
  }
 </ul>
