updated portfolio app

--- a/portfolio-app/src/app/app.component.html
+++ b/portfolio-app/src/app/app.component.html
@@ -11,9 +11,9 @@
   </div>
 </nav>
 
-<a [routerLink]="['cv', 'new']">LINK NEW</a>
+<!-- <a [routerLink]="['cv', 'new']">LINK NEW</a>
 <br>
 <a [routerLink]="['cv', 1, 'edit']">LINK EDIT</a>
 <br>
-<a [routerLink]="['cv', 1, 'delete']">LINK DELETE</a>
+<a [routerLink]="['cv', 1, 'delete']">LINK DELETE</a> -->
  <router-outlet />
